# CPPBridge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GUIDE.md  LICENSE  QUICKSTART.md  README.md  auto-bridge.js  bridge_core.h  build.bat  cppbridge.h  main.cpp  package-lock.json  package.json  test_connection.py  test_from_cpp.txt  universal_bridge.h
.cache/clangd/index/: arena.h.AE004F4D38F70177.idx  async.h.E517B88CA8184C10.idx  audio.h.E00C5C34698FB339.idx  base64.h.3774FF0D59E7EE4B.idx  cache.cpp.84CF8575BCA46926.idx  cache.h.FABD225ADD1DC800.idx  clipboard.cpp.914F6014AAB21E0C.idx  clipboard.h.0A556082C57BE21D.idx  compress.cpp.5BB840939C355637.idx  compress.h.2723F2126B8707B4.idx  compress_adv.cpp.BEC71524D40CF1CF.idx  compress_adv.h.A131F869E1180E01.idx  crashhandler.cpp.CA37A754B6A2F167.idx  crashhandler.h.8C422965E2CC08EE.idx  crashhandler_adv.cpp.3672C4302F156823.idx  crashhandler_adv.h.E9D0C38B83CAA974.idx  crypto.cpp.8D59510F6DFE081C.idx  crypto.h.1AAB1165A9F77BC6.idx  crypto_hw.cpp.552B179548B4A6FF.idx  crypto_hw.h.43FAFA0EDB09CF73.idx  database.cpp.B2E82029A1818C6A.idx  database.h.5253ED3B41D43996.idx  eventbus.cpp.F4FEC0D1E683BE80.idx  eventbus.h.9DD4750321AD103B.idx  file_manager.cpp.815C6EAC4F85BC61.idx  file_manager.h.F9B8322248B366C4.idx  ftp_client.cpp.B5FEEA1E59FF7BBD.idx  ftp_client.h.B5700D51A82C1293.idx  generated_bridge.cpp.5CA4F76422233FA9.idx  http_client.cpp.28D640C81CE5B1CF.idx  http_client.h.7DC66D586BE18791.idx  http_client_adv.cpp.AE1B57B42BCB4E95.idx  http_client_adv.h.6454FDB4C32DEBD0.idx  hub.cpp.A2DC0A96ABF516A1.idx  image.h.0BCED7661DBB1A2C.idx  jsi.h.F571E13063FA2DF5.idx  json.h.5E7CD8EEC257AFB2.idx  keyvalue.cpp.914866C119DBA40B.idx  keyvalue.h.59CB7594CC96DE9A.idx  logger.h.80BD2FA9F27A03D8.idx  (+33 more)
.github/workflows/: build.yml
bridge/: bridge.d.ts  bridge_registry.json  index-napi.js  index.d.ts  index.js  package.json  registry.json
docs/: API.md  BUILDING.md  QUICKSTART.md  README.md
generator/: gen.py  templates.py
hub/: arena.h  backend_export.h  bridge.h  bridge_runtime.cpp  example_bridge.cpp  generated_bridge.cpp  hub.cpp  schema.h
hub/core/: async.h  crashhandler.cpp  crashhandler.h  crashhandler_adv.cpp  crashhandler_adv.h  eventbus.cpp  eventbus.h  logger.h  logging.cpp  logging.h  logging_adv.cpp  logging_adv.h  types.h  version.cpp  version.h
hub/jsi/: jsi.h
hub/modules/database/: database.cpp  database.h  keyvalue.cpp  keyvalue.h  orm.cpp  orm.h
hub/modules/filesystem/: file_manager.cpp  file_manager.h  mmap.cpp  mmap.h  mmap_adv.cpp  mmap_adv.h
hub/modules/hardware/: usb.cpp  usb.h
hub/modules/media/: audio.h  image.h  media.cpp
hub/modules/network/: ftp_client.cpp  ftp_client.h  http_client.cpp  http_client.h  http_client_adv.cpp  http_client_adv.h  http_client_portable.h  websocket.cpp  websocket.h  websocket_adv.cpp  websocket_adv.h  wsserver.cpp  wsserver.h
hub/modules/security/: crypto.cpp  crypto.h  crypto_hw.cpp  crypto_hw.h  sandbox.cpp  sandbox.h
hub/modules/system/: clipboard.cpp  clipboard.h  diskio.cpp  diskio.h  power.cpp  power.h  sysinfo.cpp  sysinfo.h  sysutils.cpp  sysutils.h  sysutils_adv.cpp  sysutils_adv.h  sysutils_portable.h
hub/modules/utils/: base64.h  cache.cpp  cache.h  compress.cpp  compress.h  compress_adv.cpp  compress_adv.h  json.h  utils.cpp
npm/: README.md  bridge.js  index.d.ts  index.js  package.json  test.js
react-native/: README.md  package.json  react-native-cppbridge.podspec
react-native/android/: CMakeLists.txt
react-native/android/src/main/cpp/: jni-bridge.cpp
react-native/android/src/main/java/com/cppbridge/: CppBridgeModule.java.template
react-native/ios/: CppBridge.h  CppBridge.mm
react-native/src/: index.tsx
scripts/: build-napi.js  build-wasm.js  build.js  generate-registry.js  watch.js
src/: my_functions.cpp
test/: test_advanced.js  test_callbacks.js  test_native_threads.js  test_suite.js
tests/: memcheck.h  test.h  test_all.cpp  test_phase1.py
wasm/: CMakeLists.txt  README.md  cppbridge-browser.ts  wasm-bindings.cpp
